// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/index combines other reducers 1`] = `[Function]`;

exports[`reducers/index has a default state 1`] = `
Object {
  "auth": false,
  "request": Object {
    "error": null,
    "pending": 0,
    "statusCode": null,
  },
}
`;

exports[`reducers/index reduces nothing 1`] = `
Object {
  "auth": "AUTH",
  "request": "REQUEST",
}
`;

exports[`reducers/index reduces other actions 1`] = `
Object {
  "auth": "STATE",
  "request": "REQUEST",
}
`;
